# flaplint

./: AGENTS.md  CHANGELOG.md  README.md  justfile  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/scripts/: ops_versions.py
.github/workflows/: checks.yml  ci.yml  ops-drift.yml  pr-title.yml  pr.yml  release.yml
docs/: README.md  architecture.md  ops-version-anchoring.md  resolving-dependencies.md  sinks-and-findings.md  taint-model.md
src/flaplint/: __init__.py  __main__.py  analyzer.py  astutils.py  cli.py  collector.py  constants.py  databag.py  discovery.py  handlers.py  model.py  render.py  report.py  summary.py  taint.py  traversal.py  version.py
tests/: conftest.py  test_aliasing.py  test_api_anchors.py  test_databag_accessors.py  test_explain_gaps.py  test_false_positives.py  test_field_provenance.py  test_instance_attr_provenance.py  test_interprocedural.py  test_render.py  test_sink.py  test_template.py  test_units.py
tests/drift/: README.md  corpus.py  test_api_anchors.py  test_corpus.py
tests/unit/: test_cli.py  test_collapse.py  test_context_sensitive.py  test_ctor_type_inference.py  test_databag_accessors.py  test_discovery.py  test_downward_dispatch.py  test_explain_gaps.py  test_false_positives.py  test_field_provenance.py  test_instance_attr_provenance.py  test_interprocedural.py  test_iteration.py  test_lib_version_collision.py  test_multi_origin.py  test_order.py  test_ownership.py  test_render.py  test_sink.py  test_template.py  test_units.py  test_version.py  test_volatile.py  test_walrus.py
