[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flaplint"
version = "1.0.0"
description = "Static interprocedural taint linter for Juju relation-databag ordering churn."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "michaeldmitry", email = "michael.dmitry98@gmail.com" }]
keywords = ["juju", "charm", "linter", "static-analysis", "ast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
# The analyzer is deliberately stdlib-only (ast). No runtime dependencies.
dependencies = []

[dependency-groups]
# Dev tooling, installed by ``uv sync`` and on ``uv run`` automatically (no flags).
# ``pytest`` runs the suite. ``ops`` is a *test-only* dependency, used solely by the
# drift suite under tests/drift/ (test_api_anchors.py + test_corpus.py's oracle) to
# guard against drift in the ops/pebble API surface flaplint anchors on. The analyzer
# itself never imports ops (it reads source as text), and the drift tests skip when ops
# is absent — so a bare ``uv pip install .`` of the tool itself needs none of this.
dev = ["pytest>=7.0", "ops"]

[project.scripts]
flaplint = "flaplint.cli:main"

[project.urls]
Homepage = "https://github.com/michaeldmitry/flaplint"

[tool.hatch.build.targets.wheel]
packages = ["src/flaplint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Keep ``tests/`` importable from any subdir (tests/unit/, tests/drift/) so shared
# helpers like ``from conftest import details`` resolve after the split into
# categorised subdirectories.
pythonpath = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py38"
